deployment/deployment_0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: user-java
        image: registryvtx2838.azurecr.io/user-java:latest
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 80
          name: user-java
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "openhackkeyvault69"
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  ports:
  - port: 80
  selector:
    app: user-java
