deployment/deployment_3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: poi
        image: registryvtx2838.azurecr.io/poi:latest
        ports:
        - containerPort: 80
          name: poi
---
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  ports:
  - port: 80
  selector:
    app: poi
