deployment/deployment_4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: trips
        image: registryvtx2838.azurecr.io/trips:latest
        ports:
        - containerPort: 80
          name: trips
---
apiVersion: v1
kind: Service
metadata:
  name: trips
spec:
  ports:
  - port: 80
  selector:
    app: trips
