deployment/deployment_inssurance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-deployment
  namespace: api
  labels:
    deploy: insurance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance
  template:
    metadata:
      labels:
        app: insurance
    spec:
      containers:
      - image: registryvtx2838.azurecr.io/insurance:1.0
        imagePullPolicy: Always
        name: insurance
        resources:
          requests:
            memory: "512Mi"
          limits:
            memory: "5Gi"
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: insurance
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: insurance
  ports:
  - protocol: TCP
    name: insurance-http
    port: 80
    targetPort: 8081
